--- a/Rental/Rental.WEB/Views/Account/Login.cshtml
+++ b/Rental/Rental.WEB/Views/Account/Login.cshtml
@@ -25,12 +25,17 @@
             @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
         </div>
     </div>
-
+ 
     <div class="form-group">
-        <div class="col-md-offset-4 col-md-10">
+        <div class="col-md-offset-1 col-md-2">
+            <a href="@Url.Action("ForgotPassword","Account")" class="btn btn-dark">Забыл пароль</a>
+        </div>
+        <div class="col-md-offset-1 col-md-8">
             <input type="submit" value="Войти" class="btn btn-default btn-dark" />
         </div>
     </div>
+
+
 </div>
 }
 
