--- a/Rental/Rental.WEB/Views/Account/ShowUser.cshtml
+++ b/Rental/Rental.WEB/Views/Account/ShowUser.cshtml
@@ -5,28 +5,58 @@
 }
 
 <div>
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
+    @if (!Model.ConfirmedEmail)
+    {
+        <h2 class="text-center text-danger">Пожалуйста подтвердите Email</h2>
+    }
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.Email)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Email)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Email)
+                <br />
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Name)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt>
+            <dd>
+                @Html.DisplayFor(model => model.Name)
+                <br />
+            </dd>
 
-        </dt>
-        <dd>
-            <a class="btn btn-default btn-dark" href="@Url.Action("LogOut","Account")">Выйти</a>
-        </dd>
-    </dl>
+            <dt>
+
+            </dt>
+            <dd>
+                <a class="btn btn-default btn-dark" href="@Url.Action("ChangeName","Account")">Изменить имя</a>
+                <br />
+            </dd>
+
+            <dt>
+
+            </dt>
+            <dd>
+                <a class="btn btn-default btn-dark" href="@Url.Action("ChangeEmail","Account")">Изменить почту</a>
+                <br />
+            </dd>
+            <dt>
+
+            </dt>
+            <dd>
+                <a class="btn btn-default btn-dark" href="@Url.Action("ResetPasswordEmail","Account",new { email=User.Identity.Name})">Изменить пароль</a>
+                <br />
+            </dd>
+            <dt>
+
+            </dt>
+            <dd>
+                <a class="btn btn-default btn-dark" href="@Url.Action("LogOut","Account")">Выйти</a>
+                <br />
+            </dd>
+        </dl>
 
 </div>
