--- a/Rental/Rental.WEB/Views/Manager/ShowConfirms.cshtml
+++ b/Rental/Rental.WEB/Views/Manager/ShowConfirms.cshtml
@@ -65,28 +65,37 @@
                 </div>
             </div>
         </div>
-        @foreach (var i in Model.Orders)
+        @if (Model != null && Model.Orders != null && Model.Orders.Count > 0)
         {
-            <div class="col-md-12">
-                <div class="col-md-10">
-                    <h4><b>Номер: </b>@i.Id</h4>
-                    <h4><b>Автомобиль: </b> @i.Car.Brand.Name @i.Car.Model</h4>
-                    <h4><b>Период: </b> с @i.DateStart.ToShortDateString() по @i.DateEnd.ToShortDateString()</h4>
-                    <h4 class="text-danger"><b>Оплата: </b>@(i.Payment.IsPaid ? "Оплачен" : "Неоплачен")</h4>
+            foreach (var i in Model.Orders)
+            {
+                <div class="col-md-12">
+                    <div class="col-md-10">
+                        <h4><b>Номер: </b>@i.Id</h4>
+                        <h4><b>Автомобиль: </b> @i.Car.Brand.Name @i.Car.Model</h4>
+                        <h4><b>Период: </b> с @i.DateStart.ToShortDateString() по @i.DateEnd.ToShortDateString()</h4>
+                        <h4 class="text-danger"><b>Оплата: </b>@(i.Payment.IsPaid ? "Оплачен" : "Неоплачен")</h4>
+                    </div>
+                    <div class="col-md-2">
+                        <a class="btn btn-success btn-dark" href="@Url.Action("Confirm","Manager",new { id=i.Id})">Подтвердить</a>
+                    </div>
                 </div>
-                <div class="col-md-2">
-                    <a class="btn btn-success btn-dark" href="@Url.Action("Confirm","Manager",new { id=i.Id})">Подтвердить</a>
+                <hr />
+            }
+            if (Model.PageInfo.TotalPages > 1)
+            {
+                <br />
+                <div class="text-right">
+                    <div class="btn-group">
+                        @Html.PageLinks(Model.PageInfo, "filters")
+                    </div>
                 </div>
-            </div>
-            <hr />
+            }
         }
-        @if (Model.PageInfo.TotalPages > 1)
+        else
         {
-            <br />
-            <div class="text-right">
-                <div class="btn-group">
-                    @Html.PageLinks(Model.PageInfo, "filters")
-                </div>
+            <div>
+                <h4>Заказы ненайдены...</h4>
             </div>
         }
     </div>
