--- a/Rental/Rental.WEB/Views/Rent/Index.cshtml
+++ b/Rental/Rental.WEB/Views/Rent/Index.cshtml
@@ -72,7 +72,7 @@
         <div>
             <div class="dropdown">
                 <button class="btn btn-secondary btn-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    @Model.SortModes[Model.SelectedMode - 1] 
+                    @Model.SortModes[Model.SelectedMode - 1]
                     <span class="glyphicon  @((Model.SelectedMode - 1)%2==0?"glyphicon-arrow-up":"glyphicon-arrow-down")"></span>
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -87,90 +87,99 @@
                 </div>
             </div>
         </div>
-        @foreach (var i in Model.Cars)
+        @if (Model != null && Model.Cars != null && Model.Cars.Count > 0)
         {
-            <div class="col-md-12 car-item">
-                <div class="row">
-                    <div class="col-md-6">
-                        <!-- Carousel container -->
-                        <div id="my-pics-@i.Id" class="carousel slide " data-ride="carousel" data-interval="false">
-                            <!-- Indicators -->
-                            @if (i.Images.Count > 1)
-                            {
-                                <ol class="carousel-indicators">
+            foreach (var i in Model.Cars)
+            {
+                <div class="col-md-12 car-item">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <!-- Carousel container -->
+                            <div id="my-pics-@i.Id" class="carousel slide " data-ride="carousel" data-interval="false">
+                                <!-- Indicators -->
+                                @if (i.Images.Count > 1)
+                                {
+                                    <ol class="carousel-indicators">
+                                        @for (int j = 0; j < i.Images.Count; j++)
+                                        {
+                                            <li data-target="#my-pics" data-slide-to="@j" class="@(j == 0 ? "active" : "")"></li>
+                                        }
+                                    </ol>
+                                }
+                                <!-- Content -->
+                                <div class="carousel-inner" role="listbox">
+                                    <!-- Slide 1 -->
                                     @for (int j = 0; j < i.Images.Count; j++)
                                     {
-                                        <li data-target="#my-pics" data-slide-to="@j" class="@(j == 0 ? "active" : "")"></li>
+                                        <div class="item @(j==0?"active":"")">
+                                            <img src="@String.Format("data:image/gif;base64,{0}", Convert.ToBase64String(i.Images[j].Photo))" alt="@i.Images[j].Text">
+                                        </div>
                                     }
-                                </ol>
-                            }
-                            <!-- Content -->
-                            <div class="carousel-inner" role="listbox">
-                                <!-- Slide 1 -->
-                                @for (int j = 0; j < i.Images.Count; j++)
+                                </div>
+                                @if (i.Images.Count > 1)
                                 {
-                                    <div class="item @(j==0?"active":"")">
-                                        <img src="@String.Format("data:image/gif;base64,{0}", Convert.ToBase64String(i.Images[j].Photo))" alt="@i.Images[j].Text">
-                                    </div>
+                                    <!-- Previous/Next controls -->
+                                    <a class="left carousel-control" href="#my-pics-@i.Id" role="button" data-slide="prev">
+                                        <span class="icon-prev" aria-hidden="true"></span>
+                                        <span class="sr-only">Previous</span>
+                                    </a>
+                                    <a class="right carousel-control" href="#my-pics-@i.Id" role="button" data-slide="next">
+                                        <span class="icon-next" aria-hidden="true"></span>
+                                        <span class="sr-only">Next</span>
+                                    </a>
+
+
                                 }
                             </div>
-                            @if (i.Images.Count > 1)
-                            {
-                                <!-- Previous/Next controls -->
-                                <a class="left carousel-control" href="#my-pics-@i.Id" role="button" data-slide="prev">
-                                    <span class="icon-prev" aria-hidden="true"></span>
-                                    <span class="sr-only">Previous</span>
-                                </a>
-                                <a class="right carousel-control" href="#my-pics-@i.Id" role="button" data-slide="next">
-                                    <span class="icon-next" aria-hidden="true"></span>
-                                    <span class="sr-only">Next</span>
-                                </a>
+                        </div>
+                        <div class="col-md-6">
+                            <h2>@i.Brand.Name @i.Model</h2>
+                            <h4 class="price text-right">@i.Price грн. сутки</h4>
+                            <h5>Качество: @i.Quality.Text</h5>
 
+                            <ul class="list-group list-group-horizontal">
+                                <li class="list-group-item">
+                                    <span class="glyphicon glyphicon-user"></span>
+                                    @i.Кoominess
+                                </li>
+                                <li class="list-group-item">
+                                    <span class="glyphicon glyphicon-transfer"></span>
+                                    @i.Transmission.Category
+                                </li>
+                                <li class="list-group-item">
+                                    <span class="glyphicon glyphicon-fire"></span>
+                                    @i.Fuel
+                                </li>
+                                <li class="list-group-item">
+                                    <span class="glyphicon glyphicon-forward"></span>
+                                    @i.EngineVolume
+                                </li>
+                            </ul>
+                            <p class="text-right">
+                                <a class="btn btn-default btn-dark" href="@Url.Action("Car","Rent",new { id=i.Id})">Подробнее &raquo;</a>
+                            </p>
+                        </div>
+                        <div class="col-md-12">
 
-                            }
                         </div>
                     </div>
-                    <div class="col-md-6">
-                        <h2>@i.Brand.Name @i.Model</h2>
-                        <h4 class="price text-right">@i.Price грн. сутки</h4>
-                        <h5>Качество: @i.Quality.Text</h5>
 
-                        <ul class="list-group list-group-horizontal">
-                            <li class="list-group-item">
-                                <span class="glyphicon glyphicon-user"></span>
-                                @i.Кoominess
-                            </li>
-                            <li class="list-group-item">
-                                <span class="glyphicon glyphicon-transfer"></span>
-                                @i.Transmission.Category
-                            </li>
-                            <li class="list-group-item">
-                                <span class="glyphicon glyphicon-fire"></span>
-                                @i.Fuel
-                            </li>
-                            <li class="list-group-item">
-                                <span class="glyphicon glyphicon-forward"></span>
-                                @i.EngineVolume
-                            </li>
-                        </ul>
-                        <p class="text-right">
-                            <a class="btn btn-default btn-dark" href="@Url.Action("Car","Rent",new { id=i.Id})">Подробнее &raquo;</a>
-                        </p>
-                    </div>
-                    <div class="col-md-12">
+                </div>
+            }
+            if (Model.PageInfo.TotalPages > 1)
+            {
 
+                <div class="text-right">
+                    <div class="btn-group">
+                        @Html.PageLinks(Model.PageInfo, "filters")
                     </div>
                 </div>
-
-            </div>
+            }
         }
-        @if (Model.PageInfo.TotalPages > 1)
+        else
         {
-
-            <div class="text-right">
-                <div class="btn-group">
-                    @Html.PageLinks(Model.PageInfo, "filters")
-                </div>
+            <div>
+                <h4>Автомобили ненайдены...</h4>
             </div>
         }
     </div>
