--- a/Rental/Rental.WEB/Views/Rent/Car.cshtml
+++ b/Rental/Rental.WEB/Views/Rent/Car.cshtml
@@ -56,7 +56,7 @@
     <div id="properties" class="col-md-12">
         <ul class="list-group">
             <li class="list-group-item black">Характеристики</li>
-            <li class="list-group-item">Атребут качества: @Model.Quality.Text</li>
+            <li class="list-group-item">Атрибут качества: @Model.Quality.Text</li>
             <li class="list-group-item">Номер: @Model.Number</li>
             <li class="list-group-item">Количество дверей: @Model.Doors</li>
             <li class="list-group-item">Вместительность: @Model.Кoominess</li>
