--- a/Rental/Rental.WEB/Views/Rent/Index.cshtml
+++ b/Rental/Rental.WEB/Views/Rent/Index.cshtml
@@ -135,7 +135,7 @@
                         <div class="col-md-6">
                             <h2>@i.Brand.Name @i.Model</h2>
                             <h4 class="price text-right">@i.Price грн. сутки</h4>
-                            <h5>Атребут качества: @i.Quality.Text</h5>
+                            <h5>Атрибут качества: @i.Quality.Text</h5>
 
                             <ul class="list-group list-group-horizontal">
                                 <li class="list-group-item">
